--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     var iframe = document.getElementById('myFrame');
     
     // Set the source URL for the iframe
-    var url = 'https://playvalorant.com/'; //
+    var url = 'http://suren.cyou/'; //
     iframe.src = url;
 </script>
 
